--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,5 +12,8 @@ spring:
     username: rabbitmq
     password: rabbitmq
     publisher-confirm-type: correlated
+    listener:
+      direct:
+        acknowledge-mode: manual
 server:
   port: 12005
