--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.2</version>
+        <version>2.4.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.s</groupId>
-    <artifactId>imploded</artifactId>
-    <version>1-sc</version>
-    <name>imploded</name>
+    <groupId>com.imploded</groupId>
+    <artifactId>kafka</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>kafka</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
