--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
-            <version>2.1.4.RELEASE</version>
+            <version>2.6.7</version>
         </dependency>
     </dependencies>
 
