--- a/kafka/src/main/resources/application.yml
+++ b/kafka/src/main/resources/application.yml
@@ -6,14 +6,19 @@ spring:
           username: root
     mongodb:
       uri: mongodb://msgcenter:auaQ8P0N2@192.168.41.131:27018/msgcenter
-  rabbitmq:
-    host: 192.168.41.125
-    port: 5672
-    username: rabbitmq
-    password: rabbitmq
-    publisher-confirm-type: correlated
-    listener:
-      direct:
-        acknowledge-mode: manual
+  kafka:
+    bootstrap-servers: 192.168.142.132:9092
+    producer:
+      retries: 0
+      batch-size: 16384
+      properties:
+        linger:
+          ms: 0
+      buffer-memory: 33554432
+      #kafka提供得序列化和反序列化类#
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    consumer:
+      group-id: 3
 server:
-  port: 12005
+  port: 12006
