--- a/complex/pom.xml
+++ b/complex/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>kafka-clients</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.11</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
