--- a/complex/pom.xml
+++ b/complex/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>kafka_2.11</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.12</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
