--- a/complex/pom.xml
+++ b/complex/pom.xml
@@ -63,7 +63,11 @@
             <artifactId>spark-core_2.12</artifactId>
             <version>2.4.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.thoughtworks.paranamer</groupId>
+            <artifactId>paranamer</artifactId>
+            <version>2.8</version>
+        </dependency>
     </dependencies>
 
     <build>
