--- a/complex/pom.xml
+++ b/complex/pom.xml
@@ -68,6 +68,14 @@
             <artifactId>paranamer</artifactId>
             <version>2.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
