--- a/async/pom.xml
+++ b/async/pom.xml
@@ -33,6 +33,11 @@
             <version>1.18.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+            <version>2.12.2</version>
+        </dependency>
     </dependencies>
 
     <build>
